# interposer

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: coverage.yaml  release.yaml  test.yaml
interposer/: __init__.py  errors.py  interposer.py  recorder.py  tapedeck.py  testcase.py
interposer/_testing/: weather.py
interposer/example/: weather.py
requirements/: build.txt  ci.txt  run.txt  test.txt
tests/: __init__.py  example_weather_test.py  interposer_test.py  recorder_test.py  tapedeck_test.py  testcase_test.py
