[tool.poetry]
name = "interposer"
version = "1.0.0"
description = "A generic call intercept wrapper for call inspection, modification, permission checking, recording, and playback."
readme = "README.md"
repository = "https://github.com/cloudtruth/interposer/"
keywords = ["testing", "record", "playback", "redact", "inject", "security", "intercept", "interpose", "wrap"]
authors = ["James E. King III <jking@apache.org>", "Mike Healey <healem@gmail.com>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pyyaml = "^6.0"
wrapt = "^1.13.3"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
coverage = "^7.0.2"
flake8 = "^4.0.1"
flake8-sfs = "^0.0.3"
mypy = "^0.950"
noaa-sdk = {git = "https://github.com/paulokuong/noaa", rev = "e34786e6fce1e0301d8f69b383ca1ba656e8d19d"}
pre-commit = "^2.18.1"
pytest = "^7.1"
pytest-cov = "^3.0"
types-pyyaml = "^6.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
# https://github.com/python-poetry/poetry/issues/3456
name = "pypi-public"
url = "https://pypi.org/simple/"
default = true

